积分兑换功能，家长可以定义好积分商品，成员可以用自己的积分选择积分商品兑换